rust/cubesql/cubesql/src/compile/snapshots/cubesql__compile__tests__pg_set_role_bad_user.snap
---
source: cubesql/src/compile/mod.rs
expression: "execute_queries_with_flags(vec![\"SET ROLE bad_user\".to_string()],\nDatabaseProtocol::PostgreSQL).await.err().unwrap().to_string()"
---
Planning Error: user 'not specified' is not allowed to switch to 'bad_user'
