rust/cubesql/cubesql/src/compile/snapshots/cubesql__compile__tests__pg_set_role_show.snap
---
source: cubesql/src/compile/mod.rs
expression: "execute_queries_with_flags(vec![\"SET ROLE NONE\".to_string(),\n                    \"SHOW ROLE\".to_string()],\n                DatabaseProtocol::PostgreSQL).await?.0"
---
+---------+
| setting |
+---------+
| none    |
+---------+
