rust/cubesql/cubesql/src/compile/snapshots/cubesql__compile__tests__pg_truetypid_truetypmod.snap
---
source: cubesql/src/compile/mod.rs
expression: "execute_query(\"\n                SELECT\n                    a.attrelid,\n                    a.attname,\n                    t.typname,\n                    information_schema._pg_truetypid(a.*, t.*) typid,\n                    information_schema._pg_truetypmod(a.*, t.*) typmod,\n                    information_schema._pg_numeric_precision(\n                        information_schema._pg_truetypid(a.*, t.*),\n                        information_schema._pg_truetypmod(a.*, t.*)\n                    ) as_arg\n                FROM pg_attribute a\n                JOIN pg_type t ON t.oid = a.atttypid\n                ORDER BY a.attrelid ASC, a.attnum ASC\n                \".to_string(),\n            DatabaseProtocol::PostgreSQL).await?"
---
+----------+--------------------+-----------+-------+--------+--------+
| attrelid | attname            | typname   | typid | typmod | as_arg |
+----------+--------------------+-----------+-------+--------+--------+
| 18000    | count              | int8      | 20    | -1     | 64     |
| 18000    | maxPrice           | numeric   | 1700  | -1     | NULL   |
| 18000    | minPrice           | numeric   | 1700  | -1     | NULL   |
| 18000    | avgPrice           | numeric   | 1700  | -1     | NULL   |
| 18000    | countDistinct      | int8      | 20    | -1     | 64     |
| 18000    | order_date         | timestamp | 1114  | -1     | NULL   |
| 18000    | customer_gender    | text      | 25    | -1     | NULL   |
| 18000    | taxful_total_price | numeric   | 1700  | -1     | NULL   |
| 18000    | has_subscription   | bool      | 16    | -1     | NULL   |
| 18000    | is_male            | bool      | 16    | -1     | NULL   |
| 18000    | is_female          | bool      | 16    | -1     | NULL   |
| 18000    | __user             | text      | 25    | -1     | NULL   |
| 18000    | __cubeJoinField    | text      | 25    | -1     | NULL   |
| 18016    | agentCount         | int8      | 20    | -1     | 64     |
| 18016    | agentCountApprox   | int8      | 20    | -1     | 64     |
| 18016    | __user             | text      | 25    | -1     | NULL   |
| 18016    | __cubeJoinField    | text      | 25    | -1     | NULL   |
| 18023    | someNumber         | numeric   | 1700  | -1     | NULL   |
| 18023    | __user             | text      | 25    | -1     | NULL   |
| 18023    | __cubeJoinField    | text      | 25    | -1     | NULL   |
+----------+--------------------+-----------+-------+--------+--------+
