rust/cubesql/cubesql/src/compile/snapshots/cubesql__compile__tests__pgcatalog_pg_stat_activity_postgres.snap
---
source: cubesql/src/compile/mod.rs
assertion_line: 7327
expression: "execute_query(\"SELECT * FROM pg_catalog.pg_stat_activity\".to_string(),\n            DatabaseProtocol::PostgreSQL).await?"
---
+-----+---------+-----+------------+----------+---------+------------------+-------------+-----------------+-------------+---------------+------------+-------------+--------------+-----------------+------------+-------+-------------+--------------+----------+-------+----------------+
| oid | datname | pid | leader_pid | usesysid | usename | application_name | client_addr | client_hostname | client_port | backend_start | xact_start | query_start | state_change | wait_event_type | wait_event | state | backend_xid | backend_xmin | query_id | query | backend_type   |
+-----+---------+-----+------------+----------+---------+------------------+-------------+-----------------+-------------+---------------+------------+-------------+--------------+-----------------+------------+-------+-------------+--------------+----------+-------+----------------+
| 1   | cubedb  | 1   | NULL       | NULL     | ovr     | NULL             | 127.0.0.1   | NULL            | 1234        | NULL          | NULL       | NULL        | NULL         | NULL            | NULL       | NULL  | NULL        | NULL         | NULL     | NULL  | client backend |
+-----+---------+-----+------------+----------+---------+------------------+-------------+-----------------+-------------+---------------+------------+-------------+--------------+-----------------+------------+-------+-------------+--------------+----------+-------+----------------+
